Fixes for importer findbugs
git-svn-id: file:///home/svn/omero/trunk@7665 05709c45-44f0-0310-885b-81a1db45b4a6